# 4610_HW2b

./: CMakeLists.txt  README.md
include/: .~lock.5-16-Computer Viewing.ppt#  2-04-Programming with OpenGL Part 1 Background.ppt  2-06-Programming with OpenGL Part 3 Three Dimensions.ppt  5-16-Computer Viewing.ppt
src/: HW2b.cpp
